Trying to fix quiz on mobile

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -1172,10 +1172,12 @@ pre {
 
 .quiz-container {
   position: relative;
-  height: 500px;
   text-align: center;
   margin-bottom: 30px;
   z-index: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .answers {
